Add all: Added all without dnd

--- a/src/components/commons/Modal/ModalFade/ModalFade.module.scss
+++ b/src/components/commons/Modal/ModalFade/ModalFade.module.scss
@@ -1,14 +1,18 @@
+.wrap {
+  position: absolute;
+}
+
 .fade-enter {
   opacity: 0;
 }
 .fade-enter-active {
   opacity: 1;
-  transition: opacity 300ms;
+  transition: opacity 400ms;
 }
 .fade-exit {
   opacity: 1;
 }
 .fade-exit-active {
   opacity: 0;
-  transition: opacity 300ms;
+  transition: opacity 400ms;
 }
