--- a/src/components/pages/AuthPage/AuthPage.module.scss
+++ b/src/components/pages/AuthPage/AuthPage.module.scss
@@ -13,27 +13,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1vh 2vw;
+  padding: 10px 40px;
   font-size: 20px;
   color: $btnTextColor;
   border-radius: 15px;
-
-  @include respondXLarge {
-    padding: 7px 30px;
-    font-size: 18px;
-    border-radius: 12px;
-  }
+  cursor: pointer;
 
   @include respondLarge {
     top: 7vh;
     right: 10vw;
+    padding: 10px 30px;
+    font-size: 18px;
   }
 
   @include respondMedium {
     right: 8vw;
-    padding: 1vh 2vw;
     font-size: 16px;
     border-radius: 10px;
+  }
+
+  @include respondSmall {
+    top: 2vh;
   }
 }
 
@@ -50,34 +50,22 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 15vw;
-  padding: 2vw;
+  width: 250px;
+  height: 250px;
+  padding: 20px;
   font-size: 16px;
   background-color: $bgAuthColor;
-  border-radius: 0.7vw;
-
-  @include respondXLarge {
-    width: 25vw;
-    padding: 3vw;
-  }
-
-  @include respondLarge {
-    width: 35vw;
-    padding: 4vw;
-    border-radius: 1.2vw;
-  }
-
-  @include respondMedium {
-    width: 45vw;
-    padding: 5vw;
-    border-radius: 1.5vw;
-  }
+  border-radius: 15px;
 
   @include respondSmall {
-    width: 55vw;
-    padding: 6vw;
+    width: 220px;
+    padding: 10px;
     border-radius: 2vw;
   }
+}
+
+.signUpForm {
+  height: 340px;
 }
 
 .inputWrap {
@@ -88,30 +76,23 @@
 }
 
 .input {
-  width: 12vw;
-  height: 5vh;
-  padding: 1vh 1vw;
-  font-size: 0.8vw;
-  border-radius: 0.7vw;
-
-  @include respondXLarge {
-    width: 20vw;
-    font-size: 1vw;
-  }
-
-  @include respondLarge {
-    width: 30vw;
-    font-size: 1.5vw;
-  }
-
-  @include respondMedium {
-    width: 35vw;
-    font-size: 2vw;
-  }
+  width: 200px;
+  height: 33px;
+  padding: 5px 20px;
+  font-size: 14px;
+  border-radius: 10px;
+  outline: none;
 
   @include respondSmall {
-    width: 45vw;
-    font-size: 3vw;
+    width: 175px;
+    padding: 5px 15px;
+    font-size: 14px;
+    border-radius: 7px;
+  }
+
+  &:hover,
+  &:focus {
+    box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
   }
 }
 
@@ -123,25 +104,9 @@
 }
 
 .inputError {
-  font-size: 0.8vw;
+  font-size: 14px;
   text-align: center;
   color: $errorColor;
-
-  @include respondXLarge {
-    font-size: 1vw;
-  }
-
-  @include respondLarge {
-    font-size: 1.5vw;
-  }
-
-  @include respondMedium {
-    font-size: 2vw;
-  }
-
-  @include respondSmall {
-    font-size: 3vw;
-  }
 }
 
 .rowWrap {
@@ -150,58 +115,93 @@
   justify-content: flex-start;
   width: 100%;
   gap: 10px;
-  margin-bottom: 10px;
+  margin: 0px 0px 10px 50px;
 }
 
-.label {
-  font-size: 0.8vw;
-  white-space: nowrap;
-
-  @include respondXLarge {
-    font-size: 1vw;
-  }
-
-  @include respondLarge {
-    font-size: 1.5vw;
-  }
-
-  @include respondMedium {
-    font-size: 2vw;
-  }
-
-  @include respondSmall {
-    font-size: 3vw;
-  }
+.checkboxWrap {
+  position: relative;
 }
 
 .checkbox {
+  position: absolute;
+  top: -8px;
+  left: 5px;
+  z-index: 1;
+  width: 16px;
+  height: 16px;
+  opacity: 0;
+  cursor: pointer;
+
+  &:checked + .checkboxLabel {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+
+    &:before {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: -1px;
+      left: 9px;
+      width: 10px;
+      height: 2px;
+      border-radius: 40px;
+      background: $logoutColor;
+      transform: rotate(-45deg);
+      pointer-events: none;
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      top: 1px;
+      left: 7px;
+      width: 5px;
+      height: 2px;
+      border-radius: 40px;
+      background: $logoutColor;
+      transform: rotate(45deg);
+    }
+  }
+}
+
+.checkboxLabel2 {
+  position: absolute;
+  top: -9px;
+  left: 4px;
+  width: 18px;
+  height: 18px;
+  border: 2px solid $logoutColor;
+  border-radius: 5px;
+  background-color: white;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.label {
+  padding-left: 20px;
+  font-size: 14px;
+  white-space: nowrap;
+  cursor: pointer;
+  user-select: none;
 }
 
 .submitButton {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1vh 1.5vw;
-  font-size: 0.8vw;
+  margin-top: 10px;
+  padding: 5px 25px;
+  font-size: 17px;
   color: $black;
-  border-radius: 0.7vw;
-
-  @include respondXLarge {
-    font-size: 1vw;
-  }
-
-  @include respondLarge {
-    font-size: 1.5vw;
-  }
-
-  @include respondMedium {
-    font-size: 2vw;
-  }
+  border-radius: 10px;
+  cursor: pointer;
 
   @include respondSmall {
-    font-size: 3vw;
+    font-size: 14px;
+    border-radius: 7px;
   }
-}
-
-.authError {
 }
