--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -4,3 +4,5 @@ $bgColor: #f9f7f4;
 $btnTextColor: #f3eee7;
 $bgAuthColor: #dbcfbc;
 $errorColor: #e71313;
+$logoutColor: #852222;
+$highlight: #efa501;
