--- a/src/components/pages/EditPage/EditAnswers/EditAnswers.module.scss
+++ b/src/components/pages/EditPage/EditAnswers/EditAnswers.module.scss
@@ -7,6 +7,7 @@
 .answer {
   display: flex;
   gap: 10px;
+  cursor: pointer;
 }
 
 .deleteBtn {
@@ -29,6 +30,7 @@
   border: 1px solid $gray;
   border-radius: 5px;
   outline: none;
+  cursor: pointer;
   transition: box-shadow 0.3s ease 0s;
 
   @include respondSmall {
