--- a/src/components/pages/TestListPage/TestListPage.module.scss
+++ b/src/components/pages/TestListPage/TestListPage.module.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.firstRowForUser {
+  justify-content: center;
+}
+
 .btn {
   display: flex;
   align-items: center;
@@ -119,6 +123,21 @@
   &:hover,
   &:focus {
     box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.2);
+  }
+}
+
+.filterInputForUser {
+  width: 70%;
+}
+
+.emptyList {
+  margin: auto;
+  text-align: center;
+  font-size: 32px;
+  color: rosybrown;
+
+  @include respondSmall {
+    font-size: 24px;
   }
 }
 
