--- a/src/components/pages/EditPage/EditAnswers/EditAnswers.module.scss
+++ b/src/components/pages/EditPage/EditAnswers/EditAnswers.module.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 400px;
+  margin-bottom: 10px;
 }
 
 .answer {
@@ -47,7 +49,7 @@
   position: relative;
 }
 
-.radio {
+.radiobutton {
   position: absolute;
   top: 7px;
   left: 1px;
@@ -57,7 +59,7 @@
   opacity: 0;
   cursor: pointer;
 
-  &:checked + .radioLabel:after {
+  &:checked + .isRight:after {
     content: '';
     position: absolute;
     top: 5px;
@@ -70,7 +72,7 @@
   }
 }
 
-.radioLabel {
+.isRight {
   position: absolute;
   top: 17%;
   display: inline-flex;
@@ -97,10 +99,8 @@
   opacity: 0;
   cursor: pointer;
 
-  &:checked + .checkboxLabel {
+  &:checked + .checkboxCheckMark {
     position: absolute;
-    width: 20px;
-    height: 20px;
     cursor: pointer;
 
     &:before {
@@ -131,7 +131,7 @@
   }
 }
 
-.checkboxLabel2 {
+.checkboxFrame {
   position: absolute;
   top: 5px;
   width: 20px;
