--- a/src/components/pages/EditPage/EditQuestionForm/EditQuestionForm.module.scss
+++ b/src/components/pages/EditPage/EditQuestionForm/EditQuestionForm.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 100%;
   padding: 15px;
   border: 1px solid rosybrown;
   border-radius: 8px;
@@ -36,7 +37,15 @@
 }
 
 .question {
-  width: 97%;
+  width: 70vw;
+  min-height: 30px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  resize: vertical;
+
+  @include respondSmall {
+    width: 100%;
+  }
 }
 
 .questionType {
